<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Ezra_pinklight"
    android:padding="20dp"
    tools:context=".LoginPageActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/loginPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingBottom="50dp"
            android:text="Login"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/loginDetailsWrongHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Username/Password was wrong"
            android:textSize="18sp"
            android:textColor="@color/Ezra_pinkdark"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username"
            android:labelFor="@+id/usernameInputText"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/usernameInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/white"
            android:labelFor="@+id/passwordInputText"
            android:textStyle="italic"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/passwordInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="35dp">
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/smoothbutton"
                android:textColor="@color/white"
                android:text="Login"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="30dp"
                android:text="Or Sign up using"
                android:textColor="@color/Ezra_pinkdark"
                android:labelFor="@+id/signUpButton"
                android:textStyle="italic"
                android:textSize="23sp" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/smoothbutton"
                android:textColor="@color/white"
                android:text="Sign Up"
                android:textSize="25sp" />

            <Button
                android:id="@+id/congratulationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/smoothbutton"
                android:textColor="@color/white"
                android:text="Press me to homepage"
                android:textSize="25sp"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>